# spatialpandas

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  NOTICE  README.md  conftest.py  pixi.toml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yaml  build.yml  nightly_lock.yaml  test.yaml  test.yml
conda.recipe/: meta.yaml
examples/: Polygon-Array-Construction-From-Exterior.ipynb  download.py
scripts/conda/: build.sh
scripts/conda/recipe/: meta.yaml
spatialpandas/: __init__.py  __version.py  _optional_imports.py  dask.py  geodataframe.py  geoseries.py  utils.py
spatialpandas/geometry/: __init__.py  _algorithms.py  base.py  basefixed.py  baselist.py  basestruct.py  line.py  line2d.py  lines.py  multiline.py  multiline2d.py  multipoint.py  multipoint2d.py  multipolygon.py  multipolygon2d.py  point.py  points.py  polygon.py  polygon2d.py  polygons.py  ring.py  ring2d.py
spatialpandas/geometry/_algorithms/: bounds.py  intersection.py  measures.py  orientation.py
spatialpandas/io/: __init__.py  parquet.py  utils.py
spatialpandas/spatialindex/: __init__.py  hilbert_curve.py  rtree.py
spatialpandas/tests/: _create_testdata.py  conftest.py  test_dask_autoimport.py  test_fixedextensionarray.py  test_geodataframe.py  test_listextensionarray.py  test_parquet.py  test_parquet_s3.py
spatialpandas/tests/geometry/: __init__.py  strategies.py  test_construction.py  test_cx.py  test_geometry.py  test_to_geopandas.py
spatialpandas/tests/geometry/algorithms/: test_intersection.py  test_measures.py  test_orientation.py
spatialpandas/tests/geometry/intersection/: test_point_intersection.py
spatialpandas/tests/spatialindex/: test_hilbert_curve.py  test_rtree.py
spatialpandas/tests/test_data/: serial_5.0.0.parq  serial_8.0.0.parq
spatialpandas/tests/test_data/dask_5.0.0.parq/: _common_metadata  _metadata  part.0.parquet  part.1.parquet  part.2.parquet
spatialpandas/tests/test_data/dask_8.0.0.parq/: _common_metadata  _metadata  part.0.parquet  part.1.parquet  part.2.parquet
spatialpandas/tests/test_data/dask_repart_5.0.0.parq/: _common_metadata  _metadata  part.0.parquet  part.1.parquet  part.2.parquet
spatialpandas/tests/test_data/dask_repart_8.0.0.parq/: _common_metadata  _metadata  part.0.parquet  part.1.parquet  part.2.parquet
spatialpandas/tests/tools/: test_sjoin.py
spatialpandas/tools/: __init__.py  sjoin.py
tests/: test_dask_autoimport.py  test_extensionarray.py  test_fixedextensionarray.py  test_geodataframe.py  test_listextensionarray.py  test_parquet.py
tests/geometry/: strategies.py  test_construction.py  test_cx.py  test_geometry.py  test_ragged_array.py  test_to_geopandas.py
tests/geometry/algorithms/: intersection.py  test_intersection.py  test_measures.py
tests/geometry/intersection/: test_point_intersection.py
tests/spatialindex/: rtree.py  test_hilbert_curve.py  test_rtree.py
tests/tools/: test_sjoin.py
