[build-system]
requires = ["param >=1.7.0", "pyct >=0.4.4", "setuptools >=30.3.0"]

[tool.pytest.ini_options]
addopts = [
    "--pyargs",
    "--doctest-modules",
    "--doctest-ignore-import-errors",
    "--strict-config",
    "--strict-markers",
    "--color=yes",
]
minversion = "7"
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = []

[tool.isort]
force_grid_wrap = 4
multi_line_output = 5
combine_as_imports = true
lines_between_types = 1
include_trailing_comma = true
