[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "spatialpandas"
dynamic = ["version"]
description = 'Pandas extension arrays for spatial/geometric operations'
readme = "README.md"
license = { text = "BSD-2-Clause" }
requires-python = ">=3.9"
authors = [{ name = "HoloViz developers", email = "developers@holoviz.org" }]
maintainers = [{ name = "HoloViz developers", email = "developers@holoviz.org" }]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    'dask',
    'fsspec >=2022.8',
    'numba',
    'packaging',
    'pandas',
    'pyarrow >=10',
    'retrying',
]

[project.urls]
Homepage = "https://github.com/holoviz/spatialpandas"
Source = "https://github.com/holoviz/spatialpandas"
HoloViz = "https://holoviz.org/"

[project.optional-dependencies]
tests = ['pytest', 'hypothesis']

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev" }

[tool.hatch.build.targets.wheel]
include = ["spatialpandas"]

[tool.hatch.build.targets.sdist]
include = ["spatialpandas", "scripts", "examples"]

[tool.hatch.build.hooks.vcs]
version-file = "spatialpandas/_version.py"

[tool.pytest.ini_options]
addopts = [
    "--pyargs",
    "--doctest-modules",
    "--doctest-ignore-import-errors",
    "--strict-config",
    "--strict-markers",
    "--color=yes",
]
minversion = "7"
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = [
    "error",
    "ignore:datetime.datetime.utcnow():DeprecationWarning:botocore", # https://github.com/boto/boto3/issues/3889
]

[tool.ruff]
fix = true
line-length = 100

[tool.ruff.lint]
ignore = [
    "E402", # Module level import not at top of file
    "E501", # Line too long
    "E701", # Multiple statements on one line
    "E712", # Comparison to true should be is
    "E731", # Do not assign a lambda expression, use a def
    "E741", # Ambiguous variable name
    "F405", # From star imports
    # "PLE0604", # Invalid object in `__all__`, must contain only strings
    # "PLE0605", # Invalid format for `__all__`
    # "PLR091", # Too many arguments/branches/statements
    # "PLR2004", # Magic value used in comparison
    # "PLW2901", # `for` loop variable is overwritten
    # "RUF005", # Consider {expr} instead of concatenation
    # "RUF012", # Mutable class attributes should use `typing.ClassVar`
]
extend-unsafe-fixes = [
    "F401", # Unused imports
    "F841", # Unused variables
]

[tool.isort]
force_grid_wrap = 4
multi_line_output = 5
combine_as_imports = true
lines_between_types = 1
include_trailing_comma = true
